# p4-mergesort

./: Cargo.toml
src/: bin.rs  mergesort.rs  parallel_mergesort.rs
tests/: lab.rs
